fix the clander white space in chrome only

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
   font-family: Px-Grotesk, "Tajawal" !important;
 }
+
+.fc .fc-scrollgrid-section-liquid {
+  height: 1px !important;
+}
 body,
 html {
   height: 100% !important;
